--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,37 @@
-/*  your css code here. If applicable */
+.star {
+  position: relative;
+  display: block;
+  margin: 70px;
+  width: 0px;
+  height: 0px;
+  border-right: 100px solid transparent;
+  border-bottom: 70px solid yellow;
+  border-left: 100px solid transparent;
+  transform: rotate(35deg);
+}
+
+.star::before {
+  content: '';
+  position: absolute;
+  top: -px;
+  left: -100px;
+  width: 0px;
+  height: 0px;
+  border-right: 100px solid transparent;
+  border-bottom: 70px solid yellow;
+  border-left: 100px solid transparent;
+  transform: rotate(-70deg);
+}
+
+.star::after {
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: -100px;
+  width: 0px;
+  height: 0px;
+  border-right: 100px solid transparent;
+  border-bottom: 70px solid yellow;
+  border-left: 100px solid transparent;
+  transform: rotate(70deg);
+}
