--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .star {
   position: relative;
   display: block;
-  margin: 70px;
+  margin-top: 70px;
   width: 0px;
   height: 0px;
   border-right: 100px solid transparent;
